--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,39 +1,52 @@
 security:
-    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\Etudiant: 'auto'
+        App\Entity\Entreprise: 'auto'
+        App\Entity\Admin: 'auto'
 
-    # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
-        users_in_memory: { memory: null }
+        # Définir plusieurs providers
+        app_etudiant_provider:
+            entity:
+                class: App\Entity\Etudiant
+                property: email
+        app_entreprise_provider:
+            entity:
+                class: App\Entity\Entreprise
+                property: email
+        app_admin_provider:
+            entity:
+                class: App\Entity\Admin
+                property: email
+
+        # Provider principal qui combine tous les types d'utilisateurs
+        app_user_provider:
+            chain:
+                providers: ['app_etudiant_provider', 'app_entreprise_provider', 'app_admin_provider']
 
     firewalls:
         dev:
-            # Ensure dev tools and static assets are always allowed
-            pattern: ^/(_profiler|_wdt|assets|build)/
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider  # Utiliser le provider chain
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                username_parameter: email
+                password_parameter: password
+                enable_csrf: true
+            logout:
+                path: app_logout
+                target: app_home
 
-            # Activate different ways to authenticate:
-            # https://symfony.com/doc/current/security.html#the-firewall
-
-            # https://symfony.com/doc/current/security/impersonating_user.html
-            # switch_user: true
-
-    # Note: Only the *first* matching rule is applied
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            # Password hashers are resource-intensive by design to ensure security.
-            # In tests, it's safe to reduce their cost to improve performance.
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/entreprise, roles: ROLE_ENTREPRISE }
+        - { path: ^/etudiant, roles: ROLE_ETUDIANT }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/register, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: PUBLIC_ACCESS }
