--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,11 +1,13 @@
-# yaml-language-server: $schema=../vendor/symfony/routing/Loader/schema/routing.schema.json
+# config/routes.yaml
 
-# This file is the entry point to configure the routes of your app.
-# Methods with the #[Route] attribute are automatically imported.
-# See also https://symfony.com/doc/current/routing.html
-
-# To list all registered routes, run the following command:
-#   bin/console debug:router
-
+# Charge automatiquement toutes les routes depuis les contrôleurs
 controllers:
-    resource: routing.controllers
+    resource:
+        path: ../src/Controller/
+        namespace: App\Controller
+    type: attribute
+
+# Routes d'erreur
+framework:
+    resource: '@FrameworkBundle/Resources/config/routing/errors.xml'
+    prefix: /_error
